--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewer.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewer.xaml
@@ -9,13 +9,8 @@
              d:DesignWidth="800">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
 
-        <wpf:WebView2 Grid.Row="1"
-                      Name="WebView2Browser"
+        <wpf:WebView2 Name="WebView2Browser"
                       WebMessageReceived="CoreWebView2_WebMessageReceived"
                       Loaded="WebView2Browser_OnLoaded" />
     </Grid>
