--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -37,6 +37,7 @@
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converters1:ListToStringConverter x:Key="ListToStringConverter"/>
+            <converters:EnumDescriptionConverter x:Key="EnumToDescriptionConverter" />
 
             <ObjectDataProvider MethodName="GetValues"
                                 ObjectType="{x:Type model:TagFormat}"
@@ -44,6 +45,15 @@
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="model:TagFormat" />
                 </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+
+            <ObjectDataProvider MethodName="GetValues"
+                                ObjectType="{x:Type model:SplitSentences}"
+                                x:Key="SplitSentencesProvider">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="model:SplitSentences" />
+                </ObjectDataProvider.MethodParameters>
+
             </ObjectDataProvider>
 
             <Style TargetType="TextBlock"
@@ -155,6 +165,22 @@
                                           SelectedItem="{Binding TagType}"
                                           ItemsSource="{Binding Source={StaticResource TagTypeProvider}}" />
                             </StackPanel>
+
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Newline Handling" Margin="12 0 0 5" />
+                                <ComboBox Margin="5 0 0 0"
+                                          Height="20"
+                                          SelectedItem="{Binding SplitSentencesType, Mode=TwoWay}"
+                                          ItemsSource="{Binding Source={StaticResource SplitSentencesProvider}}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={StaticResource EnumToDescriptionConverter}}" />
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+
+
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Ignore tags"
                                        Margin="12 0 0 5" />
