--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewFilter.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportViewFilter.xaml
@@ -3,10 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModel="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.ViewModel"
-             xmlns:converters="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.Converters"
-             xmlns:local="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.Model"
-             xmlns:globalization="clr-namespace:Sdl.Core.Globalization;assembly=Sdl.Core.Globalization"
              x:Name="Root"
              mc:Ignorable="d"
              DataContext="{Binding ElementName=Root}"
@@ -15,16 +11,20 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/buttonresources.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/comboboxresources.xaml" />
+                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/groupboxresources.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="Button">
+                <Setter Property="HorizontalAlignment"
+                        Value="Stretch" />
+            </Style>
             <Style TargetType="Border">
                 <Setter Property="BorderBrush"
                         Value="LightGray" />
                 <Setter Property="BorderThickness"
                         Value="1" />
-                <Setter Property="CornerRadius"
-                        Value="5" />
+
                 <Setter Property="Margin"
                         Value="5" />
             </Style>
@@ -41,86 +41,270 @@
                 <Setter Property="Margin"
                         Value="10" />
             </Style>
-            <Style TargetType="TextBlock">
-                <Setter Property="FontWeight"
-                        Value="Bold" />
+
+            <SolidColorBrush x:Key="Button.MouseOver.Background"
+                             Color="#b3d7f3" />
+            <SolidColorBrush x:Key="Button.MouseOver.Border"
+                             Color="#0078d7" />
+            <SolidColorBrush x:Key="Button.Pressed.Background"
+                             Color="#80bceb" />
+            <SolidColorBrush x:Key="Button.Pressed.Border"
+                             Color="#0078d7" />
+            <SolidColorBrush x:Key="Button.Disabled.Background"
+                             Color="#FFF4F4F4" />
+            <SolidColorBrush x:Key="Button.Disabled.Border"
+                             Color="#FFADB2B5" />
+            <SolidColorBrush x:Key="Button.Disabled.Foreground"
+                             Color="#FF838383" />
+            <Style x:Key="MenuButtonStyle"
+                   TargetType="Button">
+                <Setter Property="BorderThickness"
+                        Value="0 0 0.4 0" />
+                <Setter Property="Height"
+                        Value="20" />
+                <Setter Property="FontSize"
+                        Value="12" />
+                <Setter Property="Background"
+                        Value="White" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ButtonBase}">
+                            <Border x:Name="border"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    SnapsToDevicePixels="true">
+                                <ContentPresenter x:Name="contentPresenter"
+                                                  Focusable="False"
+                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  Margin="{TemplateBinding Padding}"
+                                                  RecognizesAccessKey="True"
+                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="Button.IsDefaulted"
+                                         Value="true">
+                                    <Setter Property="BorderBrush"
+                                            TargetName="border"
+                                            Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                                </Trigger>
+                                <Trigger Property="IsMouseOver"
+                                         Value="true">
+                                    <Setter Property="Background"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.MouseOver.Background}" />
+                                    <Setter Property="BorderBrush"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.MouseOver.Border}" />
+                                </Trigger>
+                                <Trigger Property="IsPressed"
+                                         Value="true">
+                                    <Setter Property="Background"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.Pressed.Background}" />
+                                    <Setter Property="BorderBrush"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.Pressed.Border}" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled"
+                                         Value="false">
+                                    <Setter Property="Background"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.Disabled.Background}" />
+                                    <Setter Property="BorderBrush"
+                                            TargetName="border"
+                                            Value="{StaticResource Button.Disabled.Border}" />
+                                    <Setter Property="TextElement.Foreground"
+                                            TargetName="contentPresenter"
+                                            Value="{StaticResource Button.Disabled.Foreground}" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
             </Style>
 
-            <converters:EnumToListConverter x:Key="EnumConverter" />
+
+
+
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <StackPanel>
 
-        <DockPanel x:Name="FilterMenu"
-                   Grid.Row="0"
-                   LastChildFill="False">
+        <StackPanel Orientation="Horizontal">
+            <Button Style="{StaticResource MenuButtonStyle}">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../../../Resources/filter-apply.ico"
+                           Width="14"
+                           Height="14" />
+                    <TextBlock Text="Apply Filter"
+                               Margin="5 0" />
+                </StackPanel>
+            </Button>
+            <Button Style="{StaticResource MenuButtonStyle}">
+                <StackPanel Orientation="Horizontal">
+                    <Image Width="14"
+                           Height="14"
+                           Source="../../../Resources/reverse_filter.ico" />
+                    <TextBlock Text="Reverse"
+                               Margin="5 0" />
+                </StackPanel>
+            </Button>
+            <Button Style="{StaticResource MenuButtonStyle}">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../../../Resources/filter-remove.ico"
+                           Width="14"
+                           Height="14" />
+                    <TextBlock Text="Clear"
+                               Margin="5 0" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <Separator Height="0.1" />
+        <TextBlock Text="Select what attributes to apply to the filter: "
+                   Margin="5 10 0 0"
+                   FontSize="12" />
 
-            <Button Margin="5"
-                    x:Name="ApplyFilterButton"
-                    Style="{StaticResource Sdl.Button.PrimaryStyle}"
-                    Click="ApplyFilterButton_OnClick"
-                    Content="Apply" />
-            <Button Margin="0 5 5 5"
-                    x:Name="ResetFilterButton"
-                    Style="{StaticResource Sdl.Button.SecondaryStyle}"
-                    Click="ResetFilterButton_OnClick"
-                    Content="Reset" />
-            <ComboBox x:Name="OperatorComboBox"
-                      SelectedIndex="0"
-                      BorderBrush="Transparent"
-                      Style="{StaticResource Sdl.ComboBox.Generic.Style}"
-                      HorizontalContentAlignment="Center"
-                      Height="23">
-                <ComboBoxItem Content="OR"
-                              HorizontalContentAlignment="Center" />
-                <ComboBoxItem Content="AND"
-                              HorizontalContentAlignment="Center" />
-            </ComboBox>
 
-        </DockPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="6*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-        <Border Grid.Row="1">
-            <Expander x:Name="StatusesExpander">
-                <Expander.Header>
-                    <TextBlock Text="Statuses" />
-                </Expander.Header>
-                <ListBox x:Name="StatusesListBox"
-                         ItemsSource="{Binding Converter={StaticResource EnumConverter}, ConverterParameter={x:Type local:Statuses}}" />
-            </Expander>
-        </Border>
+            <TextBlock Grid.Column="0"
+                       Grid.Row="0"
+                       Text="Available: "
+                       Margin="10 20 0 0"
+                       FontWeight="Light" />
+            <Border Grid.Column="0"
+                    Grid.Row="1">
+                <StackPanel>
+                    <Expander x:Name="StatusesExpander">
+                        <Expander.Header>
+                            <TextBlock Text="Statuses"
+                                       FontWeight="Bold"
+                                       Foreground="#2154ad" />
+                        </Expander.Header>
+                        <ListBox x:Name="StatusesListBox"
+                                 ItemsSource="{Binding Statuses}" />
+                    </Expander>
 
-        <Border Grid.Row="2">
-            <Expander x:Name="MatchTypesExpander">
+                    <Expander x:Name="MatchTypesExpander">
 
-                <Expander.Header>
-                    <TextBlock Text="Match Types" />
-                </Expander.Header>
+                        <Expander.Header>
+                            <TextBlock Text="Match Types"
+                                       FontWeight="Bold"
+                                       Foreground="#2154ad" />
+                        </Expander.Header>
 
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <ListBox Grid.Column="0"
+                                     x:Name="MatchTypesListBox"
+                                     ItemsSource="{Binding MatchTypes}"
+                                     SelectionChanged="MatchTypesListBox_OnSelectionChanged" />
+
+                            <ListBox Grid.Column="1"
+                                     VerticalAlignment="Center"
+                                     ItemsSource="{Binding FuzzyBands}"
+                                     Visibility="Collapsed"
+                                     x:Name="FuzzyMatchPercentageListBox" />
+                        </Grid>
+                    </Expander>
+                </StackPanel>
+            </Border>
+
+            <StackPanel Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="5">
+
+                <Button Content=">"
+                        Height="20"
+                        Click="AddFiltersButton_Clicked" />
+                <Button Content="&lt;"
+                        Height="20"
+                        Margin="0 5 0 0"
+                        Click="RemoveFilterButton_Clicked" />
+                <Button Content="&lt;&lt;"
+                        Height="20"
+                        Margin="0 5 0 0"
+                        Click="RemoveAllFiltersButton_Clicked" />
+
+            </StackPanel>
+
+            <TextBlock Grid.Column="2"
+                       Grid.Row="0"
+                       Text="Selected: "
+                       Margin="10 20 0 0"
+                       FontWeight="Light" />
+
+            <Border Grid.Column="2"
+                    BorderBrush="Transparent"
+                    Grid.Row="1">
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
-                    <ListBox Grid.Column="0"
-                             x:Name="MatchTypesListBox"
-                             ItemsSource="{Binding Converter={StaticResource EnumConverter}, ConverterParameter={x:Type local:MatchTypes}}"
-                             SelectionChanged="MatchTypesListBox_OnSelectionChanged" />
-
-                    <ListBox Grid.Column="1"
-                             VerticalAlignment="Center"
-                             ItemsSource="{Binding FuzzyBands}"
-                             Visibility="Collapsed"
-                             x:Name="FuzzyMatchPercentageListBox"/>
+                    <Border Grid.Row="0"
+                            Margin="0"
+                            Style="{StaticResource {x:Type Border}}">
+                        <ListBox x:Name="SelectedFilters_ListBox"
+                                 ItemsSource="{Binding SelectedFilters, ElementName=Root, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </Border>
+                    <GroupBox Grid.Row="1"
+                              Style="{StaticResource Sdl.GroupBox.SingleLineStyle}"
+                              Header="Relationship">
+                        <ComboBox Style="{StaticResource Sdl.ComboBox.Generic.Style}">
+                            <ComboBoxItem Content="AND" />
+                            <ComboBoxItem Content="OR" />
+                        </ComboBox>
+                    </GroupBox>
                 </Grid>
-            </Expander>
-        </Border>
-    </Grid>
+            </Border>
+
+            <Border Grid.Row="2"
+                    Grid.Column="0"
+                    Margin="5 5 5 0"
+                    BorderThickness="1 1 1 0"
+                    Grid.ColumnSpan="3">
+                <StackPanel>
+                    <TextBlock Text="Filters applied: " />
+                    <TextBox IsReadOnly="True"
+                             BorderThickness="0"
+                             Text="{Binding AppliedFilters}" />
+                </StackPanel>
+            </Border>
+            <Border Grid.Row="3"
+                    Margin="5 0 5 5"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="3">
+                <TextBlock FontWeight="Light">
+                    <TextBlock.Text>
+                        <MultiBinding StringFormat="{}Filtered {0} of {1} segments">
+                            <Binding Path="FilteredSegmentCount" />
+                            <Binding Path="SegmentCount" />
+                        </MultiBinding>
+                    </TextBlock.Text>
+                </TextBlock>
+            </Border>
+
+        </Grid>
+    </StackPanel>
 
 </UserControl>
