DeepL Translation Provider - 7.0.8.1 - SDLCOM-6492: - Updated logic to use the cached translation if the segment was previously translated. - Introduced a new setting in DeepL options to enable or disable resending draft translations. Integrated support for the - ITranslationProviderExtension interface to maintain compatibility with the MT Comparison Tool (SDLCOM-6521).

--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -156,6 +156,13 @@
                                       ToolTip="{x:Static deepLmtProvider:PluginResources.PreserveFormatting_Tooltip}"
                                       IsChecked="{Binding PreserveFormatting}"
                                       Content="Preserve formatting" />
+                            <CheckBox Style="{StaticResource Sdl.Checkbox.GenericStyle}"
+                                      VerticalContentAlignment="Center"
+                                      Margin="15,0,0,5"
+                                      x:Name="ResendDraft"
+                                      ToolTip="{x:Static deepLmtProvider:PluginResources.ResendDraft_Tooltip}"
+                                      IsChecked="{Binding ResendDraft}"
+                                      Content="Resend Draft" />
 
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Tag handling"
