--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
@@ -5,9 +5,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:model="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.Model"
              xmlns:viewModel="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.ViewModel"
-             xmlns:controls="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.Controls"
              xmlns:core="clr-namespace:Sdl.ProjectAutomation.Core;assembly=Sdl.ProjectAutomation.Core"
              xmlns:styleSelectors="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.StyleSelectors"
+             xmlns:converters="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.Converters"
+             xmlns:controls="http://schemas.trados.com/xaml/platform/controls"
              Name="Root"
              d:DataContext="{d:DesignInstance viewModel:ReportExplorerViewModel}"
              mc:Ignorable="d"
@@ -20,6 +21,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/treeviewresources.xaml" />
+                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/customprogressringstyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <DataTemplate DataType="{x:Type core:ProjectInfo}"
                           x:Key="FilterTemplate">
@@ -60,146 +62,137 @@
                                                       ParentItemStyle="{StaticResource ParentItemStyle}"
                                                       ChildItemStyle="{StaticResource ChildItemStyle}" />
 
+            <converters:BoolToVisConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <Grid>
+        <controls:CustomProgressRing Text="Loading..."
+                                     HorizontalAlignment="Center"
+                                     VerticalAlignment="Center"
+                                     Style="{StaticResource Sdl.CustomProgressRing.Normal}"
+                                     Visibility="{Binding IsLoading, ElementName=Root, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                     x:Name="LoadingScreen" />
+
+        <Grid Margin="10"
+              x:Name="ReportExplorerGrid"
+              Visibility="{Binding IsLoading, ElementName=Root, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Invert}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
 
+            <Grid Margin="0,0,0,2"
+                  Grid.Column="0"
+                  Grid.Row="0"
+                  Height="24">
+                <TextBox Padding="0,0,20,0"
+                         Text="{Binding FilterString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         VerticalContentAlignment="Center"
+                         IsEnabled="True" />
+                <TextBlock IsHitTestVisible="False"
+                           Padding="0,0,20,0"
+                           Text="Filter by project name"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5,0,0,0"
+                           Foreground="DarkGray">
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Visibility"
+                                    Value="Collapsed" />
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding FilterString}"
+                                                   Value="" />
+                                    </MultiDataTrigger.Conditions>
+                                    <MultiDataTrigger.Setters>
+                                        <Setter Property="Visibility"
+                                                Value="Visible" />
+                                    </MultiDataTrigger.Setters>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <Button Command="{Binding ClearFilterCommand}"
+                        Cursor="Hand"
+                        ToolTip="Clear filter"
+                        HorizontalAlignment="Right"
+                        Margin="0,0,0,0"
+                        Width="20"
+                        VerticalContentAlignment="Center">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Visibility"
+                                    Value="Visible" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="Transparent">
+                                            <ContentPresenter />
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding FilterString}"
+                                                   Value="" />
+                                    </MultiDataTrigger.Conditions>
+                                    <MultiDataTrigger.Setters>
+                                        <Setter Property="Visibility"
+                                                Value="Collapsed" />
+                                    </MultiDataTrigger.Setters>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
 
-        <Grid Margin="0,0,0,2"
-              Grid.Column="0"
-              Grid.Row="0"
-              Height="24">
-            <TextBox Padding="0,0,20,0"
-                     Text="{Binding FilterString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     VerticalContentAlignment="Center"
-                     IsEnabled="True" />
-            <TextBlock IsHitTestVisible="False"
-                       Padding="0,0,20,0"
-                       Text="Filter by project name"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"
-                       Margin="5,0,0,0"
-                       Foreground="DarkGray">
-                <TextBlock.Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="Visibility"
-                                Value="Collapsed" />
-                        <Style.Triggers>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding FilterString}"
-                                               Value="" />
-                                </MultiDataTrigger.Conditions>
-                                <MultiDataTrigger.Setters>
-                                    <Setter Property="Visibility"
-                                            Value="Visible" />
-                                </MultiDataTrigger.Setters>
-                            </MultiDataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
-            <Button Command="{Binding ClearFilterCommand}"
-                    Cursor="Hand"
-                    ToolTip="Clear filter"
-                    HorizontalAlignment="Right"
-                    Margin="0,0,0,0"
-                    Width="20"
-                    VerticalContentAlignment="Center">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Setter Property="Visibility"
-                                Value="Visible" />
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="Button">
-                                    <Border Background="Transparent">
-                                        <ContentPresenter />
-                                    </Border>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Style.Triggers>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding FilterString}"
-                                               Value="" />
-                                </MultiDataTrigger.Conditions>
-                                <MultiDataTrigger.Setters>
-                                    <Setter Property="Visibility"
-                                            Value="Collapsed" />
-                                </MultiDataTrigger.Setters>
-                            </MultiDataTrigger>
-                        </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                    <Image HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Source="../../../Resources/Close.png"
+                           Height="10"
+                           RenderOptions.BitmapScalingMode="HighQuality"
+                           RenderOptions.EdgeMode="Aliased" />
+                </Button>
+            </Grid>
 
-                    </Style>
-                </Button.Style>
-                <Image HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Source="../../../Resources/Close.png"
-                       Height="10"
-                       RenderOptions.BitmapScalingMode="HighQuality"
-                       RenderOptions.EdgeMode="Aliased" />
-            </Button>
+            <TreeView Grid.Row="1"
+                      x:Name="ReportsTreeView"
+                      SelectedItemChanged="TreeView_OnSelectedItemChanged"
+                      ItemContainerStyleSelector="{StaticResource TreeViewItemStyleSelector}"
+                      ItemsSource="{Binding ReportGroups}">
+                <TreeView.ItemTemplate>
+
+                    <HierarchicalDataTemplate ItemsSource="{Binding Reports}">
+
+                        <TextBlock Text="{Binding ProjectName}" />
+
+                        <HierarchicalDataTemplate.ItemTemplate>
+                            <DataTemplate DataType="{x:Type model:ReportInfo}">
+
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="../../../Resources/Report.ico"
+                                           Width="16"
+                                           Height="16"
+                                           Margin="0,0,5,0" />
+                                    <TextBlock Text="{Binding ReportName}"
+                                               Margin="0 0 0 0"
+                                               VerticalAlignment="Center" />
+                                </StackPanel>
+
+                            </DataTemplate>
+                        </HierarchicalDataTemplate.ItemTemplate>
+
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+
+            </TreeView>
         </Grid>
-
-        <!--<ListBox Grid.Row="1"
-                 ItemsSource="{Binding Reports}"
-                 x:Name="ReportList"
-                 SelectionChanged="Selector_OnSelectionChanged"
-                 SelectedItem="{Binding SelectedReport}">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="{x:Type model:ReportInfo}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="../../../Resources/Report.png"
-                               Width="16"
-                               Height="16"
-                               Margin="0,0,5,0" />
-                        <TextBlock Text="{Binding ReportName}"
-                                   Margin="0 0 0 0"
-                                   VerticalAlignment="Center" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>-->
-
-        <TreeView Grid.Row="1"
-                  x:Name="ReportsTreeView"
-                  SelectedItemChanged="TreeView_OnSelectedItemChanged"
-                  ItemContainerStyleSelector="{StaticResource TreeViewItemStyleSelector}"
-                  ItemsSource="{Binding ReportGroups}">
-            <TreeView.ItemTemplate>
-
-                <HierarchicalDataTemplate ItemsSource="{Binding Reports}">
-
-                    <TextBlock Text="{Binding ProjectName}" />
-
-                    <HierarchicalDataTemplate.ItemTemplate>
-                        <DataTemplate DataType="{x:Type model:ReportInfo}">
-
-                            <StackPanel Orientation="Horizontal">
-                                <Image Source="../../../Resources/Report.ico"
-                                       Width="16"
-                                       Height="16"
-                                       Margin="0,0,5,0" />
-                                <TextBlock Text="{Binding ReportName}"
-                                           Margin="0 0 0 0"
-                                           VerticalAlignment="Center" />
-                            </StackPanel>
-
-                        </DataTemplate>
-                    </HierarchicalDataTemplate.ItemTemplate>
-
-                </HierarchicalDataTemplate>
-            </TreeView.ItemTemplate>
-
-        </TreeView>
     </Grid>
 </UserControl>
